Added c++ serial version

--- a/src/build
+++ b/src/build
@@ -1,2 +1,3 @@
 #!/bin/sh
-clang++ -framework OpenCL -std=c++11 main.cpp -o main.tsk
+clang++ -framework OpenCL -std=c++11 mainOpenCL.cpp -o mainOpenCL.tsk
+clang++ -framework OpenCL -std=c++11 mainC++.cpp -o mainC++.tsk
